<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_margin="20dp"
    android:weightSum="100"
    android:layout_height="match_parent"
    tools:context=".views.InputOtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="20"
        android:layout_height="wrap_content"
        android:gravity="center">
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/buttonBackground"
            android:layout_height="32dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/buttonBackground"
            android:layout_height="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_2"
                android:textColor="#263238"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/lightPink"
            android:layout_height="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="3"
                android:textColor="#BF360C"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:layout_weight="20"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/otp_icon"
        android:layout_gravity="center"
        app:tint = "@color/buttonBackground"/>

    <TextView
        android:id="@+id/txt_number_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="5"
        android:letterSpacing="0.08"
        android:text="@string/enter_otp_sent_to_your_phone_number"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <EditText
            android:id="@+id/txt_otp_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/edittext_bg"
            android:elevation="10dp"
            android:hint="@string/otp"
            android:inputType="number"
            android:maxLength="6"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#757575" />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/buttonBackground"
            android:padding="15dp"
            android:text="@string/next"
            android:textColor="#5D4037"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/otp_progressBar"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/buttonBackground" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_resend_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:gravity="center"
        android:text="@string/resend_otp_in_00_30"
        android:textSize="18sp" />



</LinearLayout>
