<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_margin="20dp"
    android:weightSum="100"
    android:layout_height="match_parent"
    tools:context=".InputPhoneNumberActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_weight="20"
       android:layout_height="wrap_content"
       android:gravity="center">
       <RelativeLayout
           android:layout_width="32dp"
           android:layout_margin="10dp"
           android:background="@drawable/circle"
           android:backgroundTint="@color/buttonBackground"
           android:layout_height="32dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="18sp"
               android:text="@string/_1"
               android:textColor="@color/white"
               android:layout_centerHorizontal="true"
               android:layout_centerVertical="true" />
       </RelativeLayout>

       <RelativeLayout
           android:layout_width="32dp"
           android:layout_margin="10dp"
           android:background="@drawable/circle"
           android:backgroundTint="@color/lightPink"
           android:layout_height="32dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="18sp"
               android:text="@string/_2"
               android:textColor="@color/white"
               android:layout_centerHorizontal="true"
               android:layout_centerVertical="true" />
       </RelativeLayout>

       <RelativeLayout
           android:layout_width="32dp"
           android:layout_margin="10dp"
           android:background="@drawable/circle"
           android:backgroundTint="@color/lightPink"
           android:layout_height="32dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="18sp"
               android:text="3"
               android:textColor="@color/white"
               android:layout_centerHorizontal="true"
               android:layout_centerVertical="true" />
       </RelativeLayout>
   </LinearLayout>
    
    <ImageView
        android:layout_weight="20"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="TODO"
        android:src="@drawable/phone_icon"
        android:layout_gravity="center"
        app:tint = "@color/buttonBackground"/>
    <TextView
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_mobile_number"
        android:textSize="25sp"
        android:textStyle="bold"
        android:letterSpacing="0.08"
        android:layout_margin="10dp"/>
    
    <LinearLayout
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp_countryCode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFlag="false" />

        <EditText
            android:id="@+id/txt_mobileNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/edittext_bg"
            android:elevation="10dp"
            android:maxLength="12"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:minHeight="48dp"
            android:padding="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="20"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_sendOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/buttonBackground"
            android:padding="15dp"
            android:text="@string/send_otp" />

        <ProgressBar
            android:id="@+id/pb_phoneNumPage"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/buttonBackground" />
    </LinearLayout>



</LinearLayout>
