<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="#FFFFFF"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="149dp"
            android:layout_height="53dp"
            android:layout_marginBottom="2dp"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
           />

        <TextView
            android:id="@+id/product_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/category_name"
            android:textColor="#757575"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="Price"
            android:textColor="#D32F2F"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/product_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="Rating"
            android:textColor="@color/textPrimary"
            android:textSize="10sp" />

        <ImageButton
            android:id="@+id/add_to_cart_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/add_to_cart"
            android:src="@drawable/ic_cart" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
